# sentinel-threat-hunting

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  threat-hunting-build-test-kql.ipynb  threat-hunting-custom.ipynb  threat-hunting-tactics.ipynb
.devcontainer/: devcontainer.json
.github/: .copilot-instructions.md
.github/prompts/: commit-and-merge.prompt.md  development-process.prompt.md  documentation.prompt.md  investigation.prompt.md  investigation.simple.prompt.md  kql-assistant.prompt.md  powershell-activity-analysis.prompt.md  process-chain-analysis-v2.prompt.md  process-chain-analysis.prompt.md  testing.prompt.md  yaml-query-builder.prompt.md
detections/: README.md
docs/: SETUP.md
docs/development/: SETUP_COMPLETE.md  development-process.prompt.md  documentation.prompt.md  implementation-pattern.prompt.md  linting-typechecking.prompt.md  testing.prompt.md
docs/prompts/: kql-assistant.prompt.md  process-chain-analysis.prompt.md  yaml-query-builder.prompt.md
investigations/: README.md
notebooks/: README.md  threat-hunting-starter.ipynb
playbooks/: README.md  host-isolation-playbook.json  ip-enrichment-playbook.json
queries/: README.md  lateral-movement.kql
queries/analysis/: README.md
queries/analysis/xdr/: file-creations-with-url-referrers.yaml  in-memory-code-injection-ntmapviewofsection.yaml  local-user-account-additions-modifications.yaml  persistence-scheduled-tasks.yaml  persistence-using-auto-startup-folder.yaml  powershell-activity-analysis.yaml  process-injection-createremotethread.yaml  process-injection-ntallocatevirtualmemory.yaml  (+5 more)
queries/untested/: credential-access.kql  data-exfiltration.kql  mitre-technique-template.kql  persistence.kql  privilege-escalation.kql
scripts/: build_test_security_incident_query.py  process_chain_analysis_v2.py
tests/: README.md  test-results.json  test_config_loader.py  test_queries.py  test_query_template.py  validate_kql.py
tests/fixtures/: test_config.yaml  test_query.kql  test_query.yaml
utils/: README.md  __init__.py  config_loader.py  hailmary_runner.py  kql_query.py  query_template.py  render_query.py  run_kql_to_dataframe.py  test_query_file.py
(+1 files in other folders)
