[tool.poetry]
name = "sentinel-threat-hunting"
version = "1.0.0"
description = "Microsoft Sentinel threat hunting queries and automation"
authors = ["Kevin Flint <kevinflint-cs2@cybersecuritysquared.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
azure-identity = "^1.15.0"
azure-monitor-query = "^1.3.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
plotly = "^5.18.0"
azure-identity-broker = "^1.3.0"
msal-extensions = "^1.3.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.3"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
detect-secrets = "^1.4.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.26.0"
notebook = "^7.0.0"
poethepoet = "^0.24.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poe.tasks]
validate = "python tests/validate_kql.py"
test = "python tests/test_queries.py"
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."
type-check = "mypy tests/"
secrets = "detect-secrets scan --baseline .secrets.baseline"
secrets-audit = "detect-secrets audit .secrets.baseline"
notebook = "jupyter lab --ip=0.0.0.0 --no-browser"
render = { cmd = "python utils/render_query.py", help = "Render KQL query with config variables (usage: poe render <kql_file> [-c config])" }
all = ["format", "lint", "type-check", "secrets", "validate", "test"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.per-file-ignores]
# Allow prints in small helper scripts under `scripts/` without lint failures
"scripts/*.py" = ["T201"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
